[package]
name = "fragtop-rs"
version = "0.1.0"
authors = ["cppcoffee <cppcoffee@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
glob = "0.3"
anyhow = "1.0"
fiemap = "0.1"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false